--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.5.1",
     "jose": "^5.2.2",
     "next": "14.1.0",
+    "prisma": "^5.9.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
