--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.9.1",
     "classnames": "^2.5.1",
     "jose": "^5.2.2",
     "next": "14.1.0",
